Bug 471088 - No square root function on the calculator
Summary: No square root function on the calculator
Status: RESOLVED FIXED
Alias: None
Product: kcalc
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Gabriel Barrantes
URL:
Keywords:
: 481041 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-06-15 18:12 UTC by David King
Modified: 2024-04-05 13:35 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David King 2023-06-15 18:12:20 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. There is no button for square root
2. Cannot do square root
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 22.04.3
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Gabriel Barrantes 2023-08-12 16:41:59 UTC
Even tho a Sqrt button can be added, using the Shift button allows square root calculation, I guess the designer would have the last call about this issue
Comment 2 Gabriel Barrantes 2023-08-12 16:44:08 UTC
(In reply to Gabriel Barrantes from comment #1)
> Even tho a Sqrt button can be added, using the Shift button allows square
> root calculation, I guess the designer would have the last call about this
> issue corresponds to the designer
Comment 3 Gabriel Barrantes 2023-08-12 16:55:33 UTC
Evan, do you think a Sqrt button is required?
Comment 4 fanzhuyifan 2024-02-08 17:44:01 UTC
*** Bug 481041 has been marked as a duplicate of this bug. ***
Comment 5 Gabriel Barrantes 2024-04-04 21:07:54 UTC
*** Bug 459708 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2024-04-04 22:19:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kcalc/-/merge_requests/81
Comment 7 Carl Schwan 2024-04-05 13:35:29 UTC
Git commit 45b50e4e29480fc9204468b9473b747255ea64d1 by Carl Schwan, on behalf of Gabriel Barrantes.
Committed on 05/04/2024 at 13:34.
Pushed by carlschwan into branch 'master'.

Promote square root button to Normal mode

Promote square root button from shift mode to normal mode so users
are able to locate it more easily. Also, rearrange sqrt and power
buttons to improve UI consistency.

M  +16   -16   kcalc.cpp
M  +1    -1    kcalc.h
M  +25   -34   kcalc.ui

https://invent.kde.org/utilities/kcalc/-/commit/45b50e4e29480fc9204468b9473b747255ea64d1