Promote square root button to Normal mode

Promote square root button from shift mode to normal mode so users
are able to locate it more easily. Also, rearrange sqrt and power
buttons to improve UI consistency.

BUG:471088